<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IPARCOS</string>
    <string name="indi_host">Select the INDI Host:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="log">Logs:</string>
    <string name="host_prompt">Host address</string>
    <string name="host_add">Add server</string>
    <string name="host_manage">Manage servers</string>
    <string name="host_prompt_text">Host IP address:</string>
    <string name="connecting">Connecting…</string>
    <string name="menu_motion">Mount</string>
    <string name="menu_connection">Connect</string>
    <string name="menu_control_panel">Devices</string>
    <string name="menu_search">Goto</string>
    <string name="unavailable">Unavailable</string>
    <string name="send_request">Send</string>
    <string name="cancel_request">Cancel</string>
    <string name="back_request">Back</string>
    <string name="BLOB_not_supported">Not supported</string>
    <string name="new_device">New device:\u0020</string>
    <string name="device_removed">Device removed:\u0020</string>
    <string name="try_to_connect">Try to connect to\u0020</string>
    <string name="connection_lost">Connection lost</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connected">Connected</string>
    <string name="connection_pb">Connection error</string>
    <string name="search_hint">Search an object</string>
    <string name="GOTO">Go to</string>
    <string name="sync">Sync</string>
    <string name="entry_star">Star</string>
    <string name="colon_with_spaces">": "</string>
    <string name="entry_names">Names</string>
    <string name="entry_type">Type</string>
    <string name="entry_magnitude">Magnitude</string>
    <string name="entry_RA">RA</string>
    <string name="entry_DE">Dec</string>
    <string name="entry_mag">mag</string>
    <string name="arcmin">arcmin</string>
    <string name="entry_size">Size</string>
    <string name="entry_Gx">Galaxy</string>
    <string name="entry_OC">Open star cluster</string>
    <string name="entry_Gb">Globular star cluster</string>
    <string name="entry_Nb">Bright emission or reflection nebula</string>
    <string name="entry_Pl">Planetary nebula</string>
    <string name="entry_cluster_nebulosity">Cluster associated with nebulosity</string>
    <string name="entry_Ast">Asterism or group of a few stars</string>
    <string name="entry_Kt">Knot or nebulous region in an external galaxy</string>
    <string name="entry_triStar">Triple star</string>
    <string name="entry_doubleStar">Double star</string>
    <string name="entry_uncertain">Uncertain type or may not exist</string>
    <string name="entry_blank">Unidentified at the place given, or type unknown</string>
    <!-- TODO: what does it mean exactly? -->
    <string name="entry_minus">Object called nonexistent in the RNGC</string>
    <string name="entry_PD">Photographic plate defect</string>
    <string name="entry_short_Gx">Galaxy</string>
    <string name="entry_short_OC">Open cluster</string>
    <string name="entry_short_Gb">Globular cluster</string>
    <string name="entry_short_Nb">Nebula</string>
    <string name="entry_short_Pl">Planetary nebula</string>
    <string name="entry_short_cluster_nebula">Cluster and nebula</string>
    <string name="entry_short_Ast">Asterism</string>
    <string name="entry_short_Kt">Knot</string>
    <string name="entry_short_triStar">Triple star</string>
    <string name="entry_short_doubleStar">Double star</string>
    <string name="entry_short_star">Star</string>
    <string name="entry_short_uncertain">Uncertain</string>
    <string name="entry_short_blank">Unknown</string>
    <string name="entry_short_minus">Nonexistent</string>
    <string name="entry_short_PD">Photographic defect</string>
    <string name="sync_slew_error">Error: can\'t request sync or goto</string>
    <string name="slew_ok">Goto started</string>
    <string name="sync_ok">Sync …</string>
    <string name="empty_catalog">Empty catalog</string>
    <string name="menu_about">About this app</string>
    <string name="app_description">IPARCOS (Indi Protocol Android Remote COntrol Software) is an INDI client for Android.
        \nIt features a control panel and others specialized tools to easily control your devices.\n\n
        The source code is available at github.com/INDIForJava/IPARCOS
        \n\nDeveloped by\n
        • <b>Marco Cipriani</b> (marcocipriani01)\n
        • <b>Romain Fafet</b> (farom57)
        \n\nOpen Source libraries:\n
        • INDIForJava, LGPL v3 license: github.com/INDIForJava/INDIForJava\n
        • DragListView, Apache 2.0 license: github.com/woxblom/DragListView\n
        • CWAC-Pager, Apache 2.0 license: github.com/commonsguy/cwac-pager
    </string>
    <string name="error_no_devices">No devices found!</string>
    <string name="error">Error:</string>
    <string name="remove_server">Remove the selected server?</string>
    <string name="sure">Are you sure?</string>
    <string name="servers_list_toast">Long click to remove, drag to rearrange</string>
    <string name="focus_in">Focus in</string>
    <string name="focus_out">Focus out</string>
    <string name="menu_focuser">Focuser</string>
    <string name="stop_motion">Abort</string>
    <string name="absolute_position">Absolute position:</string>
    <string name="set">Set</string>
    <string name="no_indi_elements">Empty property</string>
    <string name="slide_to_reorganize">Slide to reorganize</string>
    <string name="clear_logs">Clear logs</string>
    <string name="add_server">Add server</string>
    <string name="ip_address">IP address</string>
    <string name="empty_host">Empty host.</string>
    <string name="not_valid_ip">Attention: the entered text doesn\'t seem to be a valid IP address.</string>
    <string name="position">Position</string>
    <string name="mount_control">Mount control</string>
    <string name="focuser_control">Focuser control</string>
</resources>