<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/HostSection"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/indi_host" />

    <Spinner
        android:id="@+id/spinnerHost"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/port_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:prompt="@string/host_prompt"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/port_edittext"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/HostSection"
        android:ems="6"
        android:hint="7624"
        android:inputType="number" />

    <Button
        android:id="@+id/connectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerHost"
        android:layout_marginTop="8dp"
        android:text="@string/connect" />

    <TextView
        android:id="@+id/LogSection"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/connectionButton"
        android:layout_marginTop="8dp"
        android:text="@string/log" />

    <ListView
        android:id="@+id/logsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/LogSection" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clearLogsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:srcCompat="@drawable/clear"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/clear_logs" />
</RelativeLayout>