<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="farom.iparcos.FocuserFragment">

    <Button
        android:id="@+id/focuser_slower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="-" />

    <Button
        android:id="@+id/focuser_faster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/focuser_slower"
        android:text="+" />

    <Button
        android:id="@+id/focus_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/focuser_faster"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:text="@string/focus_in" />

    <Button
        android:id="@+id/focus_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stop_focuser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/focus_out" />

    <EditText
        android:id="@+id/focus_movement_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/focuser_faster"
        android:layout_centerHorizontal="true"
        android:ems="4"
        android:inputType="number"
        android:maxEms="8"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/stop_focuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/focus_movement_increment"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_motion" />
</RelativeLayout>