<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/HostSection"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indi_host"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerHost"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:prompt="@string/hostprompt"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPort"
        app:layout_constraintEnd_toStartOf="@+id/editTextPort"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:ems="6"
        android:hint="7624"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HostSection" />

    <Button
        android:id="@+id/connectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort" />

    <TextView
        android:id="@+id/LogSection"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionButton" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogSection">

        <TextView
            android:id="@+id/logTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>